--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -44,7 +44,7 @@
 .skils {
     display: flex; 
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     max-width: 40vw;
 
 
