--- a/src/components/ofertas/Ofertas.css
+++ b/src/components/ofertas/Ofertas.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     padding: 1rem 4rem;
     width: 475px;
-    max-width: 30vw;
+    max-width: 40vw;
     line-height: 2.5rem;
     background-color: rgba(245, 245, 245, 1);
     color: #434343;
@@ -26,6 +26,7 @@
     margin: 1rem;
     border-radius: 8px;
     box-sizing: border-box;
+    text-align: left;
 }
 .oferta h2 {
     display: flex;
@@ -36,9 +37,22 @@
 .oferta h2 .redText {
     font-size: 4rem;
 }
+@media only screen and (max-width: 1150px) {
+    .oferta {
+        max-width: 45vw;
+        padding: 1rem 2.5rem;
+    }
+}
 
 @media only screen and (max-width: 850px) {
     .oferta {
-        max-width: 80vw;
+        max-width: 90vw;
+        padding: 1rem 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .oferta {
+        line-height: 1.5rem;
     }
 }
