--- a/src/components/bricks/Bricks.css
+++ b/src/components/bricks/Bricks.css
@@ -7,6 +7,7 @@
     width: 100%;
     padding: 2rem;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .redText {
@@ -25,6 +26,11 @@
 
 .bricks div h1 {
     text-align: start;
+}
+
+.bricks div h3 {
+    text-align: start;
+    line-height: 2.5rem;
 }
 
 .setaDupla {
@@ -51,14 +57,18 @@
 
 .brick {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    max-width: 18vw;
-    max-height: 25vh;
+    width: 300px;
+    max-width: 25vw;
+    height: 350px;
     overflow: hidden;
     padding: 1rem;
+    padding-top: 2rem;
     border-radius: 8px;
+    box-sizing: border-box;
+    margin: 1rem;
 }
 .bricksContainer {
     display: flex;
@@ -87,4 +97,20 @@
         
         max-width: 60vw
     }
+}
+
+@media only screen and (max-width: 450px) {
+    .bricks {
+        padding: 4rem 2rem;
+    }
+    .bricks div  {
+        min-width: 90vw;
+    }
+    .bricks div h1 {
+        font-size: 2.5rem !important;
+    }
+    .brick {
+      min-width: 80vw;
+    }
+
 }
