--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -18,10 +18,10 @@
     width: 800px;
     max-width: 90vw;
     align-items: center;
-    margin-bottom: 200px;
+    margin-bottom: 5rem;
     margin-top: 100px;
     overflow: hidden;
-    
+
 }
 
 .apresentacao h1 {
@@ -71,11 +71,31 @@
     font-weight: 500;
 }
 
+.setaDuplaHome {
+    display: flex;
+    width: 100%;
+    max-height: 70px;
+    padding: 1rem;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.setaDuplaHome  img {
+    max-height: 100%;
+    width: 70px;
+    filter: brightness(0);
+}
+
+
 
 
 
 
 @media only screen and (max-width: 850px) {
+
+    .apresentacao h1 {
+        font-size: 4rem;
+        padding-top: 2rem;
+    }
 
     .apresentacao h3 {
         font-size: 1.17rem;
